disabled some tests for now